--- a/www/assets/css/bootstrap.css
+++ b/www/assets/css/bootstrap.css
@@ -2319,7 +2319,8 @@ th {
   border-bottom-width: 2px;
 }
 .table-striped > tbody > tr:nth-of-type(odd) {
-  background-color: #f9f9f9;
+  /*background-color: #f9f9f9;*/
+  background-color: #FFF6F6;
 }
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
@@ -4500,11 +4501,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-color: #006837;
 }
 .navbar-default .navbar-brand {
-  color: #777;
+  color: #fff;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #5e5e5e;
+  color: #fff;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
