--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -85,3 +85,64 @@ footer{
 .box-session a{
 	color: #fff;
 }
+
+/*AREA DE DISTRIBUIDORES*/
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+
+.contenPanel .titulo{
+	padding:0 !important;
+	}
+
+
+.contenPanel h1{
+	color:#660000;
+	font-family: 'Lato', sans-serif;
+	font-weight:300;
+	border-bottom:1px solid #660000;
+	text-transform: uppercase;
+	margin-top:0;
+	}
+	
+	.contenPanel h2{
+		font-family: 'Lato', sans-serif;
+		background-color:#660000;
+		color:#fff;
+		font-size:16px;
+		margin:0;
+		padding:5px;
+	}
+	
+	.contenPanel h3{
+		font-family: 'Lato', sans-serif;
+		color:#660000;
+	}
+
+.contenPanel i{
+		color:#660000;
+	}
+
+
+	
+.informacion{
+	background-color:#F8F8F8;
+	border-radius:10px;
+	margin:15px 0;
+	padding:25px 15px;
+	}
+	
+	.informacion table{
+		border: 1px solid #ddd;
+		background-color:#fff;
+		}
+	
+	.informacion table th{
+		background-color:#660000;
+		color:#fff;
+		}
+	
+	
+.box-destacar{
+	background-color:#fff;
+	padding:15px 5px;
+	border: 1px solid #ddd;
+	}
