--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2319,8 +2319,9 @@ th {
   border-bottom-width: 2px;
 }
 .table-striped > tbody > tr:nth-of-type(odd) {
-  /*background-color: #f9f9f9;*/
-  background-color: #FFF6F6;
+  /*background-color: #f9f9f9;
+  background-color: #FFF6F6;*/
+  background-color: rgba(66, 191, 67, 0.04);
 }
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
