--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ footer{
 	
 	.contenPanel h2{
 		font-family: 'Lato', sans-serif;
-		background-color:/*#660000*/#a94442;
+		background-color:/*#660000*/#218a22;
 		color:#fff;
 		font-size:16px;
 		margin:0;
@@ -134,7 +134,8 @@ footer{
 	font-weight:400;
 	}
 .contenPanel .list-group-item{
-	background-color:/*#660000*/#a94442;
+	background-color:/*#660000*/#218a22;
+	color:#fff;
 	}
 
 
@@ -162,7 +163,7 @@ footer{
 		}
 	
 	.informacion table th{
-		background-color:/*#660000*/#a94442;
+		background-color:/*#660000*/#218a22;
 		color:#fff;
 		}
 	
