--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ footer{
 		color: #000;
 	}
 
-.contenPanel i, .contenPanel a, .contenPanel label{
+.contenPanel i, .contenPanel label{
 		/*color:#660000;*/
 		color: #000;
 	}
