--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5310,8 +5310,10 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  /*background-color: #337ab7;
+  border-color: #337ab7;*/
+  background-color: #006837 !important;
+  border-color: #fff;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
