--- a/assets/club/css/style.css
+++ b/assets/club/css/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+
 body{
 	border-top: 5px solid #006837;
+	font-family: 'Lato', sans-serif;
 }
 
 .franja{
@@ -96,6 +99,48 @@ margin: 0 !important;
 	/*padding-bottom:25px;*/
 }
 
+
+#premios h2,
+#enterate h2,
+#donde-comprar h2{
+	color: #12491d;
+	font-weight: 300 !important;
+	text-transform: uppercase;
+}
+
+#preguntas-frecuentes h2{
+	color: #fff;
+	font-weight: 300 !important;
+	text-transform: uppercase;
+}
+
+.card-title{
+	text-align: center;
+	line-height: 25px !important;
+}
+
+#enterate{
+	background-color: #f2f2f2;
+	padding: 25px 0;
+}
+
+#preguntas-frecuentes{
+	background-color: #6d1e3f;
+	padding: 25px 0;
+}
+
+
+#preguntas-frecuentes p{
+	color: #fff !important;
+	    font-size: 1.48rem;
+}
+
+
+.box-blanca{
+	background-color: #fff;
+	padding: 25px;
+	border-radius: 25px;
+}
 
 
 /* END CLUB*/
