finalizacion funcionalidad club piudali. Inclusion de venta por enlace de distribuidor y compra de consumidores a través del club

--- a/assets/club/css/style.css
+++ b/assets/club/css/style.css
@@ -102,7 +102,8 @@ margin: 0 !important;
 
 #premios h2,
 #enterate h2,
-#donde-comprar h2{
+#donde-comprar h2, 
+#productos h2{
 	color: #12491d;
 	font-weight: 300 !important;
 	text-transform: uppercase;
