--- a/assets/tienda/css/materialize.css
+++ b/assets/tienda/css/materialize.css
@@ -8184,7 +8184,7 @@ input[type=range]:focus::-ms-fill-upper {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 400px;
+  height: 440px !important;
   -webkit-perspective: 500px;
           perspective: 500px;
   -webkit-transform-style: preserve-3d;
