--- a/assets/tienda/css/style.css
+++ b/assets/tienda/css/style.css
@@ -263,10 +263,23 @@ margin: 0 !important;
 #como-usarlo{
 	background-color: #f2f2f2;
 	padding: 25px 0;
+	background-size: auto 90%;
+	background-repeat: no-repeat;
+	background-position: 95% 100%;
 }
 
 #piudali{
 	background-color: #f2f2f2;
+	padding: 25px 0;
+}
+
+#promesas{
+	background-color: #6D1E3F;
+	padding: 25px 0;
+}
+
+#action{
+	background-color: #fff;
 	padding: 25px 0;
 }
 
@@ -337,4 +350,32 @@ margin: 0 !important;
 
 .material-placeholder img{
 	border:double 1px #e2e2e2;
+}
+
+#container-banner-principal {
+	height: 100%; 
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: 90% 100%;
+}
+
+@media (min-width: 601px) and (max-width: 991px) {
+
+	#como-usarlo{
+		background-size: 40%;
+		background-position: 100% 100%;
+	}
+}
+
+
+@media (max-width: 600px) {
+
+	#container-banner-principal {		
+		background-size: 0px 0px;
+	}	
+
+	#como-usarlo{
+		background-size: 0px 0px;
+	}
+
 }
