--- a/assets/tienda/css/materialize.css
+++ b/assets/tienda/css/materialize.css
@@ -4513,7 +4513,8 @@ h4 {
 }
 
 h5 {
-  font-size: 1.64rem;
+  /*font-size: 1.64rem;*/
+  font-size: 1.4rem;
   line-height: 110%;
   margin: 0.82rem 0 0.656rem 0;
 }
