--- a/assets/club/css/style.css
+++ b/assets/club/css/style.css
@@ -40,6 +40,11 @@ body{
 }
 
 
+.card-enterate {
+
+	height: 300px;
+}
+
 @media (max-width: 690px) {
   .puntos-disponibles{
   		display: block;
@@ -320,6 +325,11 @@ margin: 0 !important;
         text-align: center;
         margin: 25px 0px 15px 0;
     }
+
+    .card-enterate {
+	
+		height: auto;
+	}
 }
 
 .autor{
