--- a/assets/tienda/css/materialize.css
+++ b/assets/tienda/css/materialize.css
@@ -8185,7 +8185,8 @@ input[type=range]:focus::-ms-fill-upper {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 440px !important;
+  height: 350px !important;
+  /*height: auto !important;*/
   -webkit-perspective: 500px;
           perspective: 500px;
   -webkit-transform-style: preserve-3d;
@@ -8216,6 +8217,7 @@ input[type=range]:focus::-ms-fill-upper {
   height: 100%;
   min-height: 400px;
   position: absolute;
+  position: relative;
   top: 0;
   left: 0;
 }
