--- a/assets/admin/css/print_codes_qr/style.css
+++ b/assets/admin/css/print_codes_qr/style.css
@@ -1,5 +1,7 @@
 @page { 
- 	background-color: #000 !important;
-	margin:  5px !important;
+	margin-top:  1cm !important;
+	margin-bottom:  1cm !important;
+	margin-left: 0cm !important;
+	margin-right: 0cm !important;
 	padding: 0px !important;
 }
