--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -6161,7 +6161,8 @@ button.close {
   padding: 8px 14px;
   margin: 0;
   font-size: 14px;
-  background-color: #f7f7f7;
+  background-color: rgba(109,30,63,1);
+  color: #fff;
   border-bottom: 1px solid #ebebeb;
   border-radius: 5px 5px 0 0;
 }
